# AI-Tracking

./: CMakeLists.txt  clean_makefile.sh  main.cpp  test.cpp
VideoPipeline/: CMakeLists.txt
byteTrack/: CMakeLists.txt
byteTrack/include/: byteTrack.hpp  datatype.hpp  kalmanFilter.hpp  lapjv.hpp  sTrack.hpp
byteTrack/src/: bytetrack.cpp  kalmanFilter.cpp  lapjv.cpp  sTrack.cpp
cfg/: config.json  test_config.json
deepsort/: CMakeLists.txt
deepsort/include/: FeatureTensor.h  dataType.h  matrix.h  model.h  munkres.h  onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h  tracker.h
deepsort/src/: FeatureTensor.cpp  track.cpp  tracker.cpp
include/: Logger.h  ObjectDetector.hpp  SNPEPipeline.hpp  runtime.hpp  safeQueue.hpp  streamDecode.hpp  streamEncode.hpp  udp_receive.hpp  utils.h  yolo.hpp
mavlink/: CMakeLists.txt
mavlink/include/: fctty.hpp  mavlink.hpp  mavlink_gcs.hpp
mavlink/include/v2.0/: mavlink_helpers.h
mavlink/include/v2.0/ASLUAV/: ASLUAV.h  mavlink.h  version.h
mavlink/include/v2.0/AVSSUAS/: AVSSUAS.h  mavlink.h  version.h
mavlink/include/v2.0/all/: all.h  mavlink.h  version.h
mavlink/include/v2.0/ardupilotmega/: ardupilotmega.h  mavlink.h  version.h
mavlink/include/v2.0/common/: common.h  mavlink.h  mavlink_msg_camera_tracking_image_status.h  version.h
mavlink/include/v2.0/csAirLink/: csAirLink.h  mavlink.h  version.h
mavlink/include/v2.0/cubepilot/: cubepilot.h  mavlink.h  version.h
mavlink/include/v2.0/development/: development.h  mavlink.h  version.h
mavlink/include/v2.0/icarous/: icarous.h  mavlink.h  version.h
mavlink/include/v2.0/loweheiser/: loweheiser.h  mavlink.h  version.h
mavlink/include/v2.0/minimal/: mavlink.h  minimal.h  version.h
mavlink/include/v2.0/python_array_test/: mavlink.h  python_array_test.h  version.h
mavlink/include/v2.0/standard/: mavlink.h  standard.h  version.h
mavlink/include/v2.0/storm32/: mavlink.h  storm32.h  version.h
mavlink/include/v2.0/test/: mavlink.h  test.h  version.h
mavlink/include/v2.0/uAvionix/: mavlink.h  uAvionix.h  version.h
mavlink/include/v2.0/ualberta/: mavlink.h  ualberta.h  version.h
mavlink/src/: fctty.cpp  mavlink_gsc.cpp
src/: ObjectDetector.cpp  SNPEPipeline.cpp  runtime.cpp  streamDecode.cpp  yolo.cpp
